--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -62,7 +62,7 @@
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-bold">
-          Jewelry Website Landing Page - M Jewelryy
+          Jewelry Website Landing Page - M Jewelry
         </p>
         <p class="text-[#545849] text-lg sm:text-xl">
           This is a Jewelry Landing Page design. Where you can buy any kind of
