--- a/frontend/src/components/contact/Hero.contact.astro
+++ b/frontend/src/components/contact/Hero.contact.astro
@@ -45,7 +45,7 @@
     >
       <img
         class="absolute h-full w-full object-cover"
-        src="/images/profile.webp"
+        src="https://res.cloudinary.com/dinzuxodt/image/upload/v1742895415/profile_emzf9p.webp"
         alt="profile-image"
       />
     </div>
