--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -7,9 +7,11 @@
     >
       My Latest Design & Development Projects
     </p>
-    <button
-      class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-      >View All Projects</button
+    <a href="/portfolio">
+      <button
+        class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        >View All Projects</button
+      ></a
     >
   </div>
   <div class="flex flex-col gap-10">
@@ -17,7 +19,11 @@
       <div
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
-        <img class="w-full bg-cover" src="/images/project1.webp" alt="" />
+        <img
+          class="w-full bg-cover"
+          src="https://res.cloudinary.com/dinzuxodt/image/upload/v1742895415/mailer_bk7tip.webp"
+          alt=""
+        />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-bold">
@@ -58,7 +64,11 @@
       <div
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
       >
-        <img class="w-full bg-cover" src="/images/mailer.webp" alt="" />
+        <img
+          class="rounded-xl w-full bg-cover"
+          src="https://res.cloudinary.com/dinzuxodt/image/upload/v1742895415/e-commerce_k7uhjn.webp"
+          alt=""
+        />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-bold">
@@ -136,9 +146,11 @@
         </p>
       </div>
     </div>
-    <button
-      class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
-      >View All Projects</button
+    <a href="/portfolio">
+      <button
+        class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        >View All Projects</button
+      ></a
     >
   </div>
 </div>
