--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -31,11 +31,17 @@ import ScrollUp from "../components/ScrollUp.astro";
     <link rel="manifest" href="favicon/site.webmanifest" />
     <title>My Portfolio</title>
   </head>
-  <body>
+  <body class="opacity-0 transition-opacity duration-300 ease-in-out">
     <ScrollUp />
     <Navbar />
     <slot />
     <Footer />
     <!-- <Credit /> -->
+    <script>
+      // Wait for all assets to load before showing content
+      window.onload = function () {
+        document.body.style.opacity = "1";
+      };
+    </script>
   </body>
 </html>
