--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -38,7 +38,7 @@
     >
       <img
         class="absolute h-full w-full object-cover"
-        src="https://res.cloudinary.com/dinzuxodt/image/upload/v1742895415/profile_emzf9p.webp"
+        src="/images/profile.webp"
         alt="profile-image"
       />
     </div>
