--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -49,8 +49,8 @@
       </div>
     </div>
     <hr class="w-full" />
-    <div class="py-5 text-center text-lg text-dm sm:text-xl font-semibold">
-      <p>Copyright 2025 Nikhil Patel all rights reserved</p>
+    <div class="py-5 text-center text-lg sm:text-xl font-semibold">
+      <p class="text-dm">Copyright 2025 Nikhil Patel all rights reserved</p>
     </div>
   </div>
 </div>
