--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -13,7 +13,7 @@
   </div>
 
   <ul
-    class="hidden sm:flex items-center text-lg font-medium text-[#545849] gap-12"
+    class="hidden sm:flex items-center text-xl font-medium text-[#545849] gap-12"
   >
     <li class="cursor-pointer hover:text-black !duration-0">
       <a href="/about">About Me</a>
