--- a/frontend/src/components/index/Carousel.astro
+++ b/frontend/src/components/index/Carousel.astro
@@ -1,6 +1,8 @@
-<div class="w-full bg-black text-2xl font-bold py-10 overflow-hidden">
+<div
+  class="w-full bg-gradient-to-r from-[#222] to-[#333] text-2xl font-bold overflow-hidden"
+>
   <ul
-    class="flex gap-24 [&_li]:flex [&_li]:justify-center [&_li]:items-center [&_li]:gap-4 invert scroll-left w-fit"
+    class="flex gap-32 [&_li]:flex [&_li]:justify-center py-10 [&_li]:items-center [&_li]:gap-6 invert scroll-left w-fit"
   >
     <li>
       <img class="h-10 w-10" src="/svg/mongodb.svg" />
@@ -99,12 +101,16 @@
 <style>
   @keyframes scroll-left {
     to {
-      transform: translate(calc(-50% - 3rem));
+      transform: translate(calc(-50% - 4rem));
     }
   }
 
   .scroll-left {
     animation: scroll-left 30s linear infinite;
     will-change: transform;
+  }
+
+  .scroll-left:hover {
+    animation-play-state: paused;
   }
 </style>
