--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -26,7 +26,7 @@
       about creating memorable experiences.
     </p>
     <div
-      class="flex flex-col sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
+      class="relative text-nowrap flex flex-col justify-center items-center sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
     >
       <a href="/contact">
         <button
@@ -40,6 +40,35 @@
           >View Portfolio</button
         ></a
       >
+      <a href="/Nikhil-Resume.pdf" download>
+        <p
+          id="menu_icon"
+          aria-label="Download CV"
+          class="hidden sm:block cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+        >
+          <svg
+            width="14"
+            height="14"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 3V16M12 16L8 12M12 16L16 12"
+              stroke="#0C0F03"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"></path>
+            <path
+              d="M4 20H20"
+              stroke="#0C0F03"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"></path>
+          </svg>
+        </p>
+      </a>
+      <p class="hidden sm:block xl:basis-150 text-gray-500 font-bold text-sm">⋆ CV</p>
     </div>
   </div>
 </div>
