--- a/frontend/src/components/index/Testimonial.astro
+++ b/frontend/src/components/index/Testimonial.astro
@@ -37,8 +37,7 @@
       <!-- Fixed Height for Text to Prevent Jumping -->
       <p
         id="testimonial-text"
-        class="font-medium text-lg sm:text-xl text-[#4E5358] overflow-hidden"
-        style="min-height: 90px; line-height: 1.5;"
+        class="font-medium text-lg sm:text-xl text-[#4E5358] overflow-hidden h-65 md:h-20"
       >
         "Nikhil Patel demonstrates an excellent understanding of user needs and
         all of his designs are creative and elegant in simplicity. He is very
