--- a/frontend/src/components/index/Carousel.astro
+++ b/frontend/src/components/index/Carousel.astro
@@ -1,5 +1,5 @@
 <div
-  class="w-full bg-gradient-to-r from-[#222] to-[#333] text-2xl font-bold overflow-hidden"
+  class="w-full bg-gradient-to-r from-[#222] to-[#333] text-2xl font-bold overflow-hidden user-select-none"
 >
   <ul
     class="flex gap-32 [&_li]:flex [&_li]:justify-center py-10 [&_li]:items-center [&_li]:gap-6 invert scroll-left w-fit"
