--- a/frontend/src/components/index/Carousel.astro
+++ b/frontend/src/components/index/Carousel.astro
@@ -1,8 +1,8 @@
 <div
-  class="w-full bg-gradient-to-r from-[#222] to-[#333] text-2xl font-bold overflow-hidden user-select-none"
+  class="w-full bg-gradient-to-r from-[#222] to-[#333] text-2xl font-bold overflow-hidden"
 >
   <ul
-    class="flex gap-32 [&_li]:flex [&_li]:justify-center py-10 [&_li]:items-center [&_li]:gap-6 invert scroll-left w-fit"
+    class="flex gap-32 [&_li]:flex [&_li]:justify-center py-10 [&_li]:items-center [&_li]:gap-6 invert scroll-left w-fit pointer-events-none"
   >
     <li>
       <img class="h-10 w-10" src="/svg/mongodb.svg" />
