--- a/frontend/src/components/about/Experience.about.astro
+++ b/frontend/src/components/about/Experience.about.astro
@@ -14,58 +14,80 @@
       about creating memorable experiences.
     </p>
   </div>
-  <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4 text-gray-700">
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-2 sm:border-l-2 sm:border-0 shadow-lg"
     >
-      <div
-        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
-      >
-        <img src="/images/company.png" alt="" />
+      <div>
+        <h2 class="text-2xl lg:text-3xl">2020Technologies</h2>
+        <p class="sm:text-lg">September 2024 - February 2025</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+      <div class="space-y-2">
+        <p class="text-xl sm:text-2xl">
+          Full Stack Developer
         </p>
+
+        <ul class="text-[#545849]">
+          <li>Developed company’s main website and internal hiring dashboard</li>
+          <li>Integrated secure authentication, optimized database queries</li>
+        </ul>
       </div>
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-2 sm:border-l-2 sm:border-0 shadow-lg"
     >
-      <div
-        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
-      >
-        <img src="/images/company.png" alt="" />
+      <div>
+        <h2 class="text-2xl lg:text-3xl">Girikand Travels Pvt. Ltd.</h2>
+        <p class="sm:text-lg">July 2022 - August 2024</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+      <div class="space-y-2">
+        <p class="text-xl sm:text-2xl">
+          Accountant
         </p>
+
+        <ul class="text-[#545849]">
+          <li>Managed GST filings, reconciliations, and client recoveries</li>
+          <li>Automated billing using spreadsheets, reducing errors by 30% </li>
+        </ul>
       </div>
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-5 sm:border-l-2 sm:border-0 shadow-lg"
     >
-      <div
-        class="p-2 w-fit rounded-full border border-[#0C0F03]border border-[#0C0F03]"
-      >
-        <img src="/images/company.png" alt="" />
+      <div>
+        <h2 class="text-4xl font-medium">Asian Travel House</h2>
+        <p class="text-lg">July 2020 - June 2022</p>
       </div>
-      <div class="flex flex-col gap-2">
-        <p class="text-lg sm:text-xl/6 mb-5 font-bold">Apr 2022 - Present</p>
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Designer</p>
-        <p class="text-[#545849] text-lg sm:text-xl/relaxed">
-          A digital designer and creative developer from Delhi - India
-          passionate about creating memorable experiences.
+      <div class="space-y-2">
+        <p class="text-2xl">
+          Billing Executive
         </p>
+
+        <ul class="text-[#545849]">
+          <li>Generated 300+ client invoices/month and provided MIS reports</li>
+          <li>Streamlined reporting process, improving monthly closure time</li>
+        </ul>
+      </div>
+    </div>
+
+    <div
+      class="border border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-5 sm:border-l-2 sm:border-0 shadow-lg"
+    >
+      <div>
+        <h2 class="text-4xl font-medium">Asian Travel House</h2>
+        <p class="text-lg">July 2020 - June 2022</p>
+      </div>
+      <div class="space-y-2">
+        <p class="text-2xl">
+          Billing Executive
+        </p>
+
+        <ul class="text-[#545849]">
+          <li>Generated 300+ client invoices/month and provided MIS reports</li>
+          <li>Streamlined reporting process, improving monthly closure time</li>
+        </ul>
       </div>
     </div>
   </div>
