--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ import ScrollUp from "../components/ScrollUp.astro";
     <link rel="manifest" href="favicon/site.webmanifest" />
     <title>My Portfolio</title>
   </head>
-  <body class="opacity-0 transition-opacity duration-300 ease-in-out">
+  <body class="opacity-0 transition-opacity duration-300 ease-in-out text-gray-700 bg-stone-100">
     <ScrollUp />
     <Navbar />
     <slot />
