--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap');
 @import "tailwindcss";
 
 ::-webkit-scrollbar{
@@ -16,7 +15,7 @@
 
 
 *{
-    font-family: 'Syne', sans-serif;
+    font-family: 'GT Walsheim Trial Rg', sans-serif;
     outline: none;
     user-select: none;
     transition: all ease-in 200ms;
