--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,6 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap');
 @import "tailwindcss";
 
+@font-face {
+  font-family: "MyFont";
+  src: url("/fonts/myfont.woff2") format("woff2"),
+    url("/fonts/myfont.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "MyFont";
+  src: url("/fonts/myfontmd.woff2") format("woff2"),
+    url("/fonts/myfontmd.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
@@ -15,7 +33,7 @@
 
 
 *{
-    font-family: 'GT Walsheim Trial Rg', sans-serif;
+    font-family: 'My Font', sans-serif;
     outline: none;
     user-select: none;
     transition: all ease-in 200ms;
@@ -38,8 +56,4 @@ body{
   .animate-wave {
     animation: wave 2s ease-in-out infinite;
     transform-origin: bottom center;
-  }
-
-  .text-dm{
-    font-family: "DM Sans", sans-serif !important;
   }
