--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -1,8 +1,8 @@
-<div class="bg-[#C8F031] w-full px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6">
+<div class="bg-lime-300 w-full px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6">
   <div class="max-w-[1280px] mx-auto flex flex-col pt-10">
     <div class="flex flex-col xl:flex-row justify-between gap-5 py-10 w-full">
       <div class="w-full xl:w-3/8">
-        <p class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl">
+        <p class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-lime-900">
           Got a Project? I am Available Let's Talk
         </p>
       </div>
@@ -14,7 +14,7 @@
         </p>
         <a href="/contact">
           <button
-            class="w-fit rounded-full bg-white font-bold text-lg sm:text-lg border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+            class="w-fit rounded-full bg-white font-medium text-lg sm:text-lg border border-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer"
             >Get In Touch</button
           ></a
         >
