--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -14,36 +14,18 @@
         </p>
         <a href="/contact">
           <button
-            class="w-fit rounded-full bg-white font-medium text-lg sm:text-lg border border-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer"
+            class="w-fit rounded-full bg-white font-medium text-lg sm:text-lg border border-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer hover:-translate-y-[2px] hover:shadow-[5px_5px_0px_#35530e]"
             >Get In Touch</button
           ></a
         >
         <div class="flex flex-col gap-2">
-          <p class="font-bold text-lg sm:text-xl">Follow Me</p>
+          <p class="font-medium text-lg sm:text-xl">Follow Me</p>
           <div class="flex gap-2">
-            <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
-            >
-              <img class="h-6 w-6" src="/svg/facebook.svg" />
-            </div>
-
-            <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
-            >
-              <img class="h-6 w-6" src="/svg/github.svg" />
-            </div>
-
-            <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
-            >
-              <img class="h-6 w-6" src="/svg/instagram.svg" />
-            </div>
-
-            <div
-              class="p-2 rounded-full bg-white border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
-            >
-              <img class="h-6 w-6" src="/svg/x.svg" />
-            </div>
+            <ul class="[&_li]:cursor-pointer [&_li]:hover:underline font-medium text-lime-900">
+              <li>Instagram</li>
+              <li>LinkedIn</li>
+              <li>Github</li>
+            </ul>
           </div>
         </div>
       </div>
