--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -21,8 +21,8 @@
         <div class="flex flex-col gap-2">
           <p class="font-medium text-lg sm:text-xl">Follow Me</p>
           <div class="flex gap-2">
-            <ul class="[&_li]:cursor-pointer [&_li]:hover:underline font-medium text-lime-900">
-              <li>Instagram</li>
+            <ul class="[&_li]:cursor-pointer [&_li]:hover:underline font-medium text-lime-900 flex flex-col sm:flex-row gap-2">
+              <a href="https://www.instagram.com/naive_nikhil?igsh=MTN6OG92bWxndXBpZg==" target="_blank">Instagram</a>
               <li>LinkedIn</li>
               <li>Github</li>
             </ul>
@@ -30,9 +30,9 @@
         </div>
       </div>
     </div>
-    <hr class="w-full" />
-    <div class="py-5 text-center text-lg sm:text-xl font-semibold">
-      <p class="text-dm">Copyright 2025 Nikhil Patel all rights reserved</p>
+    <hr class="w-full text-lime-800" />
+    <div class="py-5 text-center sm:text-lg font-medium">
+      <p>Copyright 2025 Nikhil Patel all rights reserved</p>
     </div>
   </div>
 </div>
