--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -23,8 +23,8 @@
           <div class="flex gap-2">
             <ul class="[&_li]:cursor-pointer [&_li]:hover:underline font-medium text-lime-900 flex flex-col sm:flex-row gap-2">
               <a href="https://www.instagram.com/naive_nikhil?igsh=MTN6OG92bWxndXBpZg==" target="_blank">Instagram</a>
-              <li>LinkedIn</li>
-              <li>Github</li>
+              <a href="www.linkedin.com/in/nikhil-p-7483ab135" target="_blank">LinkedIn</a>
+              <a href="https://github.com/naive-nikhil" target="_blank">Github</a>
             </ul>
           </div>
         </div>
