--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -26,17 +26,17 @@
       about creating memorable experiences.
     </p>
     <div
-      class="relative text-nowrap flex flex-col justify-center items-center sm:flex-row gap-4 mt-4 text-[#0C0F03] text-sm sm:text-base font-bold"
+      class="relative text-nowrap flex flex-col justify-center items-center sm:flex-row gap-4 mt-4 font-medium"
     >
       <a href="/contact">
         <button
-          class="bg-[#C8F031] rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+          class="bg-lime-300 rounded-full border border-lime-900 text-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
           >Get In Touch</button
         ></a
       >
       <a href="/portfolio">
         <button
-          class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+          class="rounded-full border border-zinc-700 px-[35px] py-[15px] shadow-[4px_4px_0px_#3f3f46] hover-active-effect"
           >View Portfolio</button
         ></a
       >
