--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -3,11 +3,11 @@
 >
   <div class="flex gap-2">
     <a href="/" class="font-medium text-xl/4.5 text-gray-800">
-      <span>nikhil</span>
+      <span>NIKHIL</span>
       <span>.</span>
       <span
         class="bg-lime-300 px-[12px] py-[6px] border rounded-full border-lime-600"
-        >uhsrav</span
+        >UHSRAV</span
       >
     </a>
 
