--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -6,7 +6,7 @@
       class="flex flex-col-reverse xl:flex-row gap-5 text-center justify-center items-center"
     >
       <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
-      <p class="text-2xl sm:text-3xl md:text-4xl font-medium">
+      <p class="text-2xl text-stone-600 sm:text-3xl md:text-4xl font-medium">
         Hello, I'm Nikhil
       </p>
       <span
@@ -15,12 +15,12 @@
       >
     </div>
     <p
-      class="flex justify-center items-center font-bold text-center text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
+      class="flex text-stone-800 justify-center items-center font-bold text-center text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
     >
       Digital Designer Creative Developer
     </p>
     <p
-      class="text-[#545849] font-base text-center w-full sm:w-[600px] text-lg sm:text-xl"
+      class="text-stone-600 font-base text-center w-full sm:w-[600px] text-lg sm:text-xl"
     >
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
