--- a/frontend/src/components/index/Features.astro
+++ b/frontend/src/components/index/Features.astro
@@ -3,7 +3,7 @@
 >
   <div class="max-w-[870px] flex px-5 text-center md:text-left">
     <p
-      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
+      class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
       At the <span
         class="mt-5 inline-block cursor-pointer text-6xl sm:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-150 active:rotate-30"
@@ -11,14 +11,14 @@
       ><br /> of Design is an Opportunity to Solve Problem
     </p>
   </div>
-  <div class="relative mx-auto flex justify-center xl:block">
+  <div class="relative mx-auto flex justify-center xl:block text-stone-800">
     <div
-      class="relative left-[10px] xl:absolute xl:-top-40 xl:-left-40 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#C8F031] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="relative left-[10px] xl:absolute xl:-top-40 xl:-left-40 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-lime-300 text-3xl font-medium border-lime-900 border shadow-[4px_4px_0px_#35530e] hover-active-effect"
     >
       02+ <span class="text-base font-normal">Experience</span>
     </div>
     <div
-      class="relative -left-[10px] xl:absolute xl:-left-15 xl:-top-10 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-[#01CC65] text-3xl font-medium border-[#0C0F03] border shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="relative -left-[10px] xl:absolute xl:-left-15 xl:-top-10 flex flex-col text-center justify-center items-center h-[140px] w-[140px] lg:w-[180px] lg:h-[180px] rounded-full bg-green-400 text-3xl font-medium border-green-900 border shadow-[4px_4px_0px_#032e15] hover-active-effect"
     >
       10+ <span class="text-base font-normal">Projects Done</span>
     </div>
