--- a/frontend/src/components/index/Services.astro
+++ b/frontend/src/components/index/Services.astro
@@ -3,14 +3,14 @@
 >
   <div class="max-w-[670px] mx-auto">
     <p
-      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
+      class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
     >
       Digital Services I am Providing
     </p>
   </div>
   <div class="flex flex-col xl:flex-row gap-6">
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border border-ston-900 rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#1c1917]"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -83,7 +83,7 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Design</p>
+        <p class="text-xl sm:text-2xl/6 font-medium">Web Design</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           Designing innovative, user-friendly websites that transform digital
           experiences, blend aesthetic appeal with functional excellence, and
@@ -93,7 +93,7 @@
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border border-ston-900 rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#1c1917]"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -149,7 +149,7 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Mobile App Design</p>
+        <p class="text-xl sm:text-2xl/6 font-medium">Mobile App Design</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           Developing smooth, responsive mobile applications that engage users,
           deliver intuitive interfaces, and provide seamless cross-platform
@@ -159,7 +159,7 @@
     </div>
 
     <div
-      class="border border-[#0C0F03] rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+      class="border border-ston-900 rounded-xl p-4 flex flex-col gap-6 shadow-[4px_4px_0px_#1c1917]"
     >
       <div
         class="bg-[#FBFFEC] flex justify-center items-center py-8 rounded-xl"
@@ -218,7 +218,7 @@
         </svg>
       </div>
       <div class="flex flex-col gap-2">
-        <p class="text-xl sm:text-2xl/6 font-bold">Web Development</p>
+        <p class="text-xl sm:text-2xl/6 font-medium">Web Development</p>
         <p class="text-[#545849] text-lg sm:text-xl/relaxed">
           Creating dynamic, scalable web solutions that leverage full-stack
           technologies, solve complex business challenges, and drive digital
