--- a/frontend/src/components/index/Services.astro
+++ b/frontend/src/components/index/Services.astro
@@ -230,7 +230,7 @@
   <div class="mx-auto">
     <a href="/contact">
       <button
-        class="bg-[#C8F031] rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="bg-lime-300 rounded-full font-medium text-stone-900 border border-lime-500 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
         >Get In Touch</button
       ></a
     >
