--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -30,7 +30,7 @@
     >
       <a href="/contact">
         <button
-          class="bg-lime-300 rounded-full border border-lime-900 text-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
+          class="bg-lime-300 rounded-full border border-lime-500 text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
           >Get In Touch</button
         ></a
       >
