--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -2,11 +2,11 @@
   class="w-full max-w-[1280px] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6 py-8 mx-auto flex justify-between items-center"
 >
   <div class="flex gap-2">
-    <a href="/" class="font-medium text-xl/4.5 text-gray-800">
+    <a href="/" class="font-medium text-xl/4.5 text-stone-900">
       <span>NIKHIL</span>
       <span>.</span>
       <span
-        class="bg-lime-300 px-[12px] py-[6px] border rounded-full border-lime-600"
+        class="bg-lime-300 px-[12px] py-[6px] border rounded-full border-lime-500"
         >UHSRAV</span
       >
     </a>
