--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -14,7 +14,7 @@
         </p>
         <a href="/contact">
           <button
-            class="w-fit rounded-full bg-white font-medium text-lg sm:text-lg border border-lime-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer hover:-translate-y-[2px] hover:shadow-[5px_5px_0px_#35530e]"
+            class="w-fit rounded-full bg-stone-100 font-medium text-lg sm:text-lg text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] cursor-pointer hover:-translate-y-[2px] hover:shadow-[5px_5px_0px_#35530e]"
             >Get In Touch</button
           ></a
         >
