--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -38,7 +38,7 @@
           <p class="px-4 py-1 border border-[#0C0F03] rounded-full">React</p>
           <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Firebase</p>
         </div>
-        <p
+        <a href="https://bcaguide.site/" target="_blank"
           class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
@@ -55,7 +55,7 @@
               stroke-linecap="round"
               stroke-linejoin="round"></path>
           </svg>
-        </p>
+        </a>
       </div>
     </div>
     <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
