--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -5,7 +5,7 @@
     <p
       class="font-medium text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center xl:text-left"
     >
-      My Latest Design & Development Projects
+      My Latest Development Projects
     </p>
     <a href="/portfolio">
       <button
@@ -17,7 +17,7 @@
   <div class="flex flex-col gap-10">
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
       >
         <img
           class="w-full bg-cover"
@@ -60,30 +60,29 @@
     </div>
     <div class="flex flex-col xl:flex-row-reverse items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
       >
         <img
           class="rounded-xl w-full bg-cover"
-          src="https://res.cloudinary.com/dinzuxodt/image/upload/v1742895415/e-commerce_k7uhjn.webp"
+          src="/images/nutrition.png"
           alt=""
         />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
-        <p class="text-2xl sm:text-3xl font-bold">
-          Jewelry Website Landing Page - M Jewelry
+        <p class="text-2xl sm:text-3xl font-medium">
+          Nutrition Facts API App 
         </p>
         <p class="text-[#545849] text-lg sm:text-xl">
-          This is a Jewelry Landing Page design. Where you can buy any kind of
-          jewelry items from this online shop.
+          Built an interactive nutrition info search tool with responsive UI and real-time results.
         </p>
-        <div class="flex gap-5 flex-wrap">
-          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Website</p>
-          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Design</p>
+        <div class="flex gap-2 flex-wrap">
+          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Express</p>
+          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Node</p>
           <p class="px-4 py-1 border border-[#0C0F03] rounded-full">
-            Development
+            MongoDB
           </p>
         </div>
-        <p
+        <a href="https://nutrition-facts-api.onrender.com/" target="_blank"
           class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
@@ -100,12 +99,12 @@
               stroke-linecap="round"
               stroke-linejoin="round"></path>
           </svg>
-        </p>
+        </a>
       </div>
     </div>
     <div class="flex flex-col xl:flex-row items-center gap-5 xl:gap-20">
       <div
-        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03]"
       >
         <img class="w-full bg-cover" src="/images/project3.webp" alt="" />
       </div>
