--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -9,7 +9,7 @@
     </p>
     <a href="/portfolio">
       <button
-        class="whitespace-nowrap hidden xl:block w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="whitespace-nowrap hidden xl:block w-fit rounded-full font-medium border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
         >View All Projects</button
       ></a
     >
@@ -106,24 +106,25 @@
       <div
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03]"
       >
-        <img class="w-full bg-cover" src="/images/project3.webp" alt="" />
+        <img class="w-full bg-cover" src="/images/fake.png" />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
-        <p class="text-2xl sm:text-3xl font-bold">
-          Creative Agency Landing Page - Connive
+        <p class="text-2xl sm:text-3xl font-medium">
+          Fake Friend Finder Game
         </p>
         <p class="text-[#545849] text-lg sm:text-xl">
-          A Creative Agency Website Landing Page design. Where you can hire
-          designers & developers for your digital projects.
+          A fun React-based game showcasing logic building, state management, and component interaction. 
         </p>
-        <div class="flex gap-5 flex-wrap">
-          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Website</p>
-          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Design</p>
+        <div class="flex gap-2 flex-wrap">
+          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">MongoDB</p>
+          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Express</p>
           <p class="px-4 py-1 border border-[#0C0F03] rounded-full">
-            Development
+            React
           </p>
+          <p class="px-4 py-1 border border-[#0C0F03] rounded-full">Node</p>
+
         </div>
-        <p
+        <a href="https://fakefriend.netlify.app/" target="_blank"
           class="p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small hover:bg-[#C8F031]"
         >
           <svg
@@ -140,7 +141,7 @@
               stroke-linecap="round"
               stroke-linejoin="round"></path>
           </svg>
-        </p>
+        </a>
       </div>
     </div>
     <a href="/portfolio">
