--- a/frontend/src/components/about/Experience.about.astro
+++ b/frontend/src/components/about/Experience.about.astro
@@ -57,26 +57,7 @@
       class="border border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-5 sm:border-l-2 sm:border-0 shadow-lg"
     >
       <div>
-        <h2 class="text-4xl font-medium">Asian Travel House</h2>
-        <p class="text-lg">July 2020 - June 2022</p>
-      </div>
-      <div class="space-y-2">
-        <p class="text-2xl">
-          Billing Executive
-        </p>
-
-        <ul class="text-[#545849]">
-          <li>Generated 300+ client invoices/month and provided MIS reports</li>
-          <li>Streamlined reporting process, improving monthly closure time</li>
-        </ul>
-      </div>
-    </div>
-
-    <div
-      class="border border-emerald-600 p-3 pl-4 bg-white flex flex-col gap-4 justify-between border-t-5 sm:border-l-2 sm:border-0 shadow-lg"
-    >
-      <div>
-        <h2 class="text-4xl font-medium">Asian Travel House</h2>
+        <h2 class="text-2xl lg:text-3xl">Asian Travel House</h2>
         <p class="text-lg">July 2020 - June 2022</p>
       </div>
       <div class="space-y-2">
