--- a/frontend/src/components/index/Projects.astro
+++ b/frontend/src/components/index/Projects.astro
@@ -20,7 +20,7 @@
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl shadow-[2px_2px_0px_#0C0F03]"
       >
         <img
-          class="w-full bg-cover"
+          class="rounded-xl w-full bg-cover"
           src="/images/home-preview.webp"
           alt=""
         />
@@ -106,7 +106,7 @@
       <div
         class="w-full xl:w-11/20 p-4 border border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03]"
       >
-        <img class="w-full bg-cover" src="/images/fake.png" />
+        <img class="w-full bg-cover rounded-xl" src="/images/fake.png" />
       </div>
       <div class="w-full xl:w-9/20 flex flex-col gap-5">
         <p class="text-2xl sm:text-3xl font-medium">
@@ -146,7 +146,7 @@
     </div>
     <a href="/portfolio">
       <button
-        class="whitespace-nowrap xl:hidden w-fit rounded-full font-bold border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+        class="whitespace-nowrap xl:hidden w-fit rounded-full font-medium border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
         >View All Projects</button
       ></a
     >
