--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -21,7 +21,7 @@
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
-    <div class="flex w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-bold">
+    <div class="flex w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-medium">
       <a href="/portfolio">
         <button
           class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
