--- a/frontend/src/components/index/Testimonial.astro
+++ b/frontend/src/components/index/Testimonial.astro
@@ -1,9 +1,9 @@
 <div
-  class="relative w-full bg-[#C8F031] px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6"
+  class="relative w-full bg-lime-300 px-6 sm:px-12 md:px-24 lg:px-48 xl:px-6"
 >
   <div class="flex flex-col gap-10 items-center py-20">
     <p
-      class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
+      class="font-medium text-lime-900 text-3xl md:text-4xl lg:text-5xl xl:text-6xl text-center"
     >
       What Clients Say
     </p>
@@ -15,11 +15,11 @@
     <!-- Testimonial Card -->
     <div
       id="testimonial-container"
-      class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[4px_4px_0px_#0C0F03] hover-active-effect w-full max-w-[770px] transition-opacity duration-500 opacity-100"
+      class="p-6 border bg-white border-[#0C0F03] rounded-xl flex flex-col gap-6 shadow-[2px_2px_0px_#0C0F03] w-full max-w-[770px] transition-opacity duration-500 opacity-100"
       style="min-height: 250px; display: flex; justify-content: space-between;"
     >
       <p
-        class="bg-[#FEE145] w-10 h-10 flex justify-center items-center rounded-full border"
+        class="bg-lime-300 w-10 h-10 flex justify-center items-center rounded-full border"
       >
         <svg
           width="19"
@@ -37,7 +37,7 @@
       <!-- Fixed Height for Text to Prevent Jumping -->
       <p
         id="testimonial-text"
-        class="font-medium text-lg sm:text-xl text-[#4E5358] overflow-hidden h-65 md:h-20"
+        class="text-lg sm:text-xl text-[#4E5358] overflow-hidden h-65 md:h-20"
       >
         "Nikhil Patel demonstrates an excellent understanding of user needs and
         all of his designs are creative and elegant in simplicity. He is very
@@ -45,7 +45,7 @@
       </p>
 
       <div class="flex flex-col gap-1">
-        <p id="testimonial-author" class="text-xl sm:text-2xl font-bold">
+        <p id="testimonial-author" class="text-xl sm:text-2xl font-medium">
           Elon Musk
         </p>
         <p id="testimonial-role" class="text-[#4E5358] text-sm sm:text-base">
