--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -6,7 +6,7 @@
       <span>NIKHIL</span>
       <span>.</span>
       <span
-        class="bg-lime-300 px-[12px] py-[6px] border rounded-full border-lime-500"
+        class="bg-lime-300 px-[12px] py-[6px] rounded-full shadow-[4px_4px_0px_#35530e]"
         >UHSRAV</span
       >
     </a>
