--- a/frontend/src/components/index/Hero.astro
+++ b/frontend/src/components/index/Hero.astro
@@ -30,13 +30,13 @@
     >
       <a href="/contact">
         <button
-          class="bg-lime-300 rounded-full border border-lime-500 text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
+          class="bg-lime-300 rounded-full text-stone-900 px-[35px] py-[15px] shadow-[4px_4px_0px_#35530e] hover-active-effect"
           >Get In Touch</button
         ></a
       >
       <a href="/portfolio">
         <button
-          class="rounded-full border border-zinc-700 px-[35px] py-[15px] shadow-[4px_4px_0px_#3f3f46] hover-active-effect"
+          class="rounded-full bg-white px-[35px] py-[15px] shadow-[4px_4px_0px_#44403b] hover-active-effect"
           >View Portfolio</button
         ></a
       >
@@ -44,7 +44,7 @@
         <p
           id="menu_icon"
           aria-label="Download CV"
-          class="hidden sm:block cursor-pointer p-4 border border-[#0C0F03] rounded-full w-fit shadow-[2px_2px_0px_#0C0F03] hover:shadow-[4px_4px_0px_#0C0F03] hover:-translate-y-1"
+          class="hidden sm:block cursor-pointer bg-white p-4 rounded-full w-fit shadow-[4px_4px_0px_#44403b] hover-active-effect hover:-translate-y-1"
         >
           <svg
             width="14"
