--- a/frontend/src/components/about/Hero.about.astro
+++ b/frontend/src/components/about/Hero.about.astro
@@ -6,32 +6,32 @@
   >
     <div class="flex items-center gap-5">
       <p class="hidden xl:block w-[36px] h-[2px] bg-[#0C0F03]"></p>
-      <p class="text-2xl sm:text-3xl md:text-4xl font-medium">Hello, I'm</p>
+      <p class="text-2xl sm:text-3xl md:text-4xl font-medium text-stone-600">Hello, I'm</p>
       <span
         class="cursor-pointer text-6xl xl:text-4xl animate-wave transition-transform duration-300 origin-bottom hover:scale-250 hover:rotate-30 active:scale-150 active:rotate-30"
         >👋</span
       >
     </div>
     <p
-      class="font-bold whitespace-nowrap text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
+      class="font-bold whitespace-nowrap text-stone-800 text-5xl md:text-6xl lg:text-7xl xl:text-8xl"
     >
       Nikhil Patel
     </p>
-    <p class="text-[#545849] font-base w-full sm:w-[600px] text-lg sm:text-xl">
+    <p class="text-stone-600 font-base w-full sm:w-[600px] text-lg sm:text-xl">
       A digital designer and creative developer from Delhi - India passionate
       about creating memorable experiences.
     </p>
     <div class="flex w-fit mt-4 text-[#0C0F03] text-sm sm:text-base font-medium">
       <a href="/portfolio">
         <button
-          class="rounded-full border border-[#0C0F03] px-[35px] py-[15px] shadow-[4px_4px_0px_#0C0F03] hover-active-effect"
+          class="rounded-full bg-white px-[35px] py-[15px] shadow-[4px_4px_0px_#44403b] hover-active-effect"
           >View Portfolio</button
         ></a
       >
     </div>
   </div>
   <div
-    class="rounded-full p-2 border border-[#0C0F03] shadow-[2px_2px_0px_#0C0F03] hover-active-effect-small"
+    class="rounded-full p-2 bg-white"
   >
     <div
       class="relative w-60 sm:w-80 h-60 sm:h-80 rounded-full overflow-hidden"
