--- a/frontend/src/components/Navbar.astro
+++ b/frontend/src/components/Navbar.astro
@@ -17,13 +17,10 @@
     class="hidden sm:flex items-center text-xl font-medium text-[#545849] gap-12"
   >
     <li class="cursor-pointer hover:text-black !duration-0">
-      <a href="/about">About Me</a>
+      <a href="/about">About Me & Contact</a>
     </li>
     <li class="cursor-pointer hover:text-black !duration-0">
       <a href="/portfolio">Portfolio</a>
-    </li>
-    <li class="cursor-pointer hover:text-black !duration-0">
-      <a href="/contact">Contact</a>
     </li>
   </ul>
   <div class="relative sm:hidden">
@@ -85,11 +82,10 @@
     class="sidebar_menu fixed z-10 top-0 right-0 bottom-0 overflow-hidden bg-white w-0 cursor-pointer flex justify-center items-center"
   >
     <div
-      class="flex flex-col items-center gap-5 font-bold text-2xl text-center"
+      class="flex flex-col items-center gap-5 font-medium text-2xl text-center"
     >
-      <p><a href="/about">About Me</a></p>
+      <p><a href="/about">About Me & Contact</a></p>
       <p><a href="/portfolio">Portfolio</a></p>
-      <p><a href="/contact">Contact</a></p>
       <p
         id="back_icon"
         aria-label="Menu"
